static/css/styles.css
@import 'https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css';

.btn {
    @apply font-bold py-2 px-4 rounded;
}
.btn-blue {
    @apply bg-blue-500 text-white;
}
.btn-blue:hover {
    @apply bg-blue-700;
}
.btn-red {
    @apply bg-red-500 text-white;
}
.btn-red:hover {
    @apply bg-red-700;
}

.transaction-btn {
    border: 2px solid #4a5568;
    padding: 0.5rem 1rem;
    display: inline-flex;
    align-items: center;
    transition: all 0.3s ease;
}

.transaction-btn:hover {
    background-color: #4a5568;
    color: white;
}

.transaction-btn i {
    margin-right: 0.5rem;
}

